[gd_scene load_steps=2 format=3 uid="uid://pkbdxaosu5ld"]

[ext_resource type="Script" path="res://Scenes/Enemy Spawner.gd" id="1_ya6r6"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_ya6r6")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-191, -107)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(-181, 95)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(190, -109)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(213, 82)
scale = Vector2(-165.679, -71.355)

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
